--- a/ND.PantryPlanner.MAUI/AppShell.xaml
+++ b/ND.PantryPlanner.MAUI/AppShell.xaml
@@ -3,7 +3,7 @@
     x:Class="ND.PantryPlanner.MAUI.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:ND.PantryPlanner.MAUI"
+    xmlns:local="clr-namespace:ND.PantryPlanner.MAUI.Views"
     Shell.FlyoutBehavior="Disabled"
     Title="ND.PantryPlanner">
 
