refactor: update routing and add new views
- Reformat `App.xaml` for indentation
- Remove `Routing.RegisterRoute` from `App.xaml.cs`
- Move `Routing.RegisterRoute` to `AppShell.xaml.cs`
- Update `ItemViewModelCommands.cs` to make `ShowAddItemAsync` private
- Register services in `MauiProgram.cs`
- Include new XAML files in `ND.PantryPlanner.MAUI.csproj`
- Update `AddItem.xaml` and `AddItem.xaml.cs` for DI and layout
- Update `MainPage.xaml` and `MainPage.xaml.cs` for new commands and layout
- Add `Get(int id)` method to `ItemViewModel.cs`
- Add new `HeaderView` and `Toolbar` components

--- a/ND.PantryPlanner.MAUI/Views/AddItem.xaml
+++ b/ND.PantryPlanner.MAUI/Views/AddItem.xaml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:vm="clr-namespace:ND.PantryPlanner.MAUI.Commands"
+             xmlns:model="clr-namespace:ND.PantryPlanner.ModelLayer.Models;assembly=ND.PantryPlanner.ModelLayer"
              x:Class="ND.PantryPlanner.MAUI.Views.AddItem"
-             Title="AddItem">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             x:DataType="vm:ItemViewModelCommands"
+             x:Name="AddItemView"
+             Title="Add Item">
+  <VerticalStackLayout>
+    <Label Text="Welcome to .NET MAUI!"
+           VerticalOptions="Center" 
+           HorizontalOptions="Center" />
+  </VerticalStackLayout>
 </ContentPage>
