--- a/ND.PantryPlanner.MAUI/Views/MainPage.xaml
+++ b/ND.PantryPlanner.MAUI/Views/MainPage.xaml
@@ -1,36 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ND.PantryPlanner.MAUI.Views.MainPage">
+             xmlns:vm="clr-namespace:ND.PantryPlanner.MAUI.Commands"
+             xmlns:model="clr-namespace:ND.PantryPlanner.ModelLayer.Models;assembly=ND.PantryPlanner.ModelLayer"
+             xmlns:partial="clr-namespace:ND.PantryPlanner.MAUI.ViewsPartial"
+             x:Class="ND.PantryPlanner.MAUI.Views.MainPage"
+             x:DataType="vm:ItemViewModelCommands"
+             x:Name="MainPageView">
 
-    <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
-
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
-
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
-        </VerticalStackLayout>
-    </ScrollView>
-
+  <ScrollView>
+    <VerticalStackLayout>
+      <HorizontalStackLayout>
+        <Button Text="Add Item"
+                FontAutoScalingEnabled="True"
+                FontAttributes="Bold"
+                Margin="10,10,10,10"
+                HorizontalOptions="Start"
+                Command="{Binding Source={x:Reference MainPageView}, Path=BindingContext.ShowAddItemCommand}"/>
+        <partial:HeaderView ViewTitle="Item List"
+                            ViewDescription="The list of items in your pantry." />
+      </HorizontalStackLayout>
+      <BoxView Margin="0,0,0,10"
+               HeightRequest="1"
+               Color="Black" />
+      <ListView>
+        
+      </ListView>
+    </VerticalStackLayout>
+  </ScrollView>
 </ContentPage>
