--- a/ND.PantryPlanner.MAUI/Views/EditItem.xaml
+++ b/ND.PantryPlanner.MAUI/Views/EditItem.xaml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:vm="clr-namespace:ND.PantryPlanner.MAUI.Commands"
+             xmlns:model="clr-namespace:ND.PantryPlanner.ModelLayer.Models;assembly=ND.PantryPlanner.ModelLayer"
+             xmlns:partial="clr-namespace:ND.PantryPlanner.MAUI.ViewsPartial"
              x:Class="ND.PantryPlanner.MAUI.Views.EditItem"
-             Title="EditItem">
+             x:DataType="vm:ItemViewModelCommands"
+             x:Name="EditItemView"
+             Title="Edit Item">
     <VerticalStackLayout>
         <Label 
             Text="Welcome to .NET MAUI!"
