feat: add item deletion functionality
* Added `Remove` method to `IRepository` interface
* Implemented `Remove` in `ItemRepository` for DB deletion
* Registered `EditItem` route in `AppShell.xaml.cs`
* Added `DeleteItemCommand` to `ItemViewModelCommands`
* Updated `Init` in `ItemViewModelCommands` to init `DeleteItemCommand`
* Made `ShowAddItemAsync`, `ShowEditItemAsync`, `SaveItemAsync`, and `CancelAsync` public
* Added `DeleteItemAsync` in `ItemViewModelCommands` for deletion with confirmation
* Updated `EditItem.xaml` view with header and separator
* Added `QueryProperty` to `EditItem.xaml.cs` for item ID binding
* Modified `OnAppearing` in `EditItem.xaml.cs` to call `ViewModel.Get` with item ID
* Adjusted layout and margins in `MainPage.xaml` for UI consistency
* Added `Delete` method to `ItemViewModel` for item removal by ID

--- a/ND.PantryPlanner.MAUI/Views/EditItem.xaml
+++ b/ND.PantryPlanner.MAUI/Views/EditItem.xaml
@@ -8,10 +8,12 @@
              x:DataType="vm:ItemViewModelCommands"
              x:Name="EditItemView"
              Title="Edit Item">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+  <VerticalStackLayout>
+    <partial:HeaderView ViewTitle="Modify Item"
+                        ViewDescription="Use this screen to modify an existing item from your pantry." />
+
+    <BoxView Margin="10,10,10,10"
+             HeightRequest="1"
+             Color="Black" />
+  </VerticalStackLayout>
 </ContentPage>
