feat: add error handling and data refresh on item delete
* Add error handling to DeleteItemAsync in ItemViewModelCommands.cs
* Update "Delete" button in MainPage.xaml with Command and CommandParameter
* Subscribe to "ItemDeleted" message in MainPage.xaml.cs constructor
* Add RefreshDataAsync method to MainPage.xaml.cs for data reloading
* Override OnDisappearing in MainPage.xaml.cs to unsubscribe from "ItemDeleted"

--- a/ND.PantryPlanner.MAUI/Views/MainPage.xaml
+++ b/ND.PantryPlanner.MAUI/Views/MainPage.xaml
@@ -49,7 +49,9 @@
                             CommandParameter="{Binding Id}"
                             Command="{Binding Source={x:Reference MainPageView}, Path=BindingContext.ShowEditItemCommand}" />
                     <Button Text="Delete"
-                            Margin="0,10,10,0"/>
+                            Margin="0,10,10,0"
+                            CommandParameter="{Binding Id}"
+                            Command="{Binding Source={x:Reference MainPageView}, Path=BindingContext.DeleteItemCommand}"/>
                   </HorizontalStackLayout>
                 </VerticalStackLayout>
               </Frame>
