feat: add update functionality and UI improvements
- Add `Update` method to `IRepository` and `ItemRepository`
- Implement `Get` method in `ItemRepository`
- Return empty string for null `ImagePath` in `ItemRepository`
- Handle `SqliteException` in try-catch blocks
- Replace `SaveItemCommand` with `AddItemCommand` and `UpdateItemCommand`
- Bind `Picker` to `ItemObject.ItemTypeString` in `AddItem` view
- Add `ItemTypeString` property to `Item` model
- Add `EditItem` view for editing items
- Update `MainPage` layout and title
- Use `Grid` layout in `HeaderView` for better alignment
- Update `ItemViewModel` with add and update methods

--- a/ND.PantryPlanner.MAUI/Views/AddItem.xaml
+++ b/ND.PantryPlanner.MAUI/Views/AddItem.xaml
@@ -46,8 +46,7 @@
               Margin="10,10,10,10"
               Grid.Column="1"
               ItemsSource="{Binding ItemTypesList}"
-              SelectedItem="{Binding ItemObject.ItemType}">
-      </Picker>
+              SelectedItem="{Binding ItemObject.ItemTypeString}"/>
 
       <HorizontalStackLayout Grid.Row="4"
                              Grid.Column="1">
@@ -57,7 +56,7 @@
                 Margin="10,10,10,10"
                 WidthRequest="100"
                 HorizontalOptions="Start"
-                Command="{Binding Source={x:Reference AddItemView}, Path=BindingContext.SaveItemCommand}"/>
+                Command="{Binding Source={x:Reference AddItemView}, Path=BindingContext.AddItemCommand}"/>
         <Button Text="Cancel" 
                 FontAutoScalingEnabled="True"
                 FontAttributes="Bold"
