--- a/ND.PantryPlanner.MAUI/ViewsPartial/HeaderView.xaml
+++ b/ND.PantryPlanner.MAUI/ViewsPartial/HeaderView.xaml
@@ -3,18 +3,19 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ND.PantryPlanner.MAUI.ViewsPartial.HeaderView">
 
-  <HorizontalStackLayout>
-    <Grid RowDefinitions="Auto,Auto,Auto"
-          Margin="10,10,10,20">
-      <Label Grid.Row="0"
-             Text="{Binding ViewTitle}"
-             HorizontalOptions="StartAndExpand"
-             FontSize="Title" />
-      <Label Grid.Row="1"
-             Grid.ColumnSpan="2"
-             Text="{Binding ViewDescription}"
-             HorizontalOptions="StartAndExpand"
-             FontSize="Body" />
-    </Grid>
-  </HorizontalStackLayout>
+  <Grid RowDefinitions="Auto,Auto,Auto"
+        ColumnDefinitions="Auto,Auto"
+        Margin="10,10,10,20">
+    <Label Grid.Row="0"
+           Text="{Binding ViewTitle}"
+           HorizontalOptions="Start"
+           LineBreakMode="WordWrap"
+           FontSize="Title"/>
+    <Label Grid.Row="1"
+           Grid.ColumnSpan="2"
+           Text="{Binding ViewDescription}"
+           HorizontalOptions="Start"
+           LineBreakMode="WordWrap"
+           FontSize="Body"/>
+  </Grid>
 </ContentView>
