feat: Update item display and command bindings
* Change button command in EditItem.xaml to UpdateItemCommand
* Modify description text in MainPage.xaml HeaderView
* Replace ListView with CollectionView for item display
* Update item template layout and elements
* Use ItemTemplate for CollectionView layout

--- a/ND.PantryPlanner.MAUI/Views/EditItem.xaml
+++ b/ND.PantryPlanner.MAUI/Views/EditItem.xaml
@@ -56,7 +56,7 @@
             Margin="10,10,10,10"
             WidthRequest="100"
             HorizontalOptions="Start"
-            Command="{Binding Source={x:Reference EditItemView}, Path=BindingContext.AddItemCommand}"/>
+            Command="{Binding Source={x:Reference EditItemView}, Path=BindingContext.UpdateItemCommand}"/>
         <Button Text="Cancel" 
             FontAutoScalingEnabled="True"
             FontAttributes="Bold"
