--- a/ND.PantryPlanner.MAUI/Views/EditItem.xaml
+++ b/ND.PantryPlanner.MAUI/Views/EditItem.xaml
@@ -45,7 +45,7 @@
           Margin="10,10,10,10"
           Grid.Column="1"
           ItemsSource="{Binding ItemTypesList}"
-          SelectedItem="{Binding ItemObject.ItemType}">
+          SelectedItem="{Binding ItemObject.ItemTypeString}">
       </Picker>
 
       <HorizontalStackLayout Grid.Row="4"
