--- a/ND.PantryPlanner.MAUI/Views/AddItem.xaml
+++ b/ND.PantryPlanner.MAUI/Views/AddItem.xaml
@@ -17,7 +17,7 @@
              HeightRequest="1"
              Color="Black" />
 
-    <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto"
+    <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto"
           ColumnDefinitions="Auto,*">
       
       <Label Grid.Row="1"
@@ -40,15 +40,25 @@
 
       <Label Grid.Row="3"
              Margin="10,10,10,10"
+             Text="Quantity" 
+             VerticalTextAlignment="Center"/>
+      <Entry Grid.Row="3"
+             Margin="10,10,10,10"
+             Grid.Column="1"
+             Keyboard="Numeric"
+             Text="{Binding ItemObject.Quantity}" />
+
+      <Label Grid.Row="4"
+             Margin="10,10,10,10"
              Text="Item Type" 
              VerticalTextAlignment="Center"/>
-      <Picker Grid.Row="3"
+      <Picker Grid.Row="4"
               Margin="10,10,10,10"
               Grid.Column="1"
               ItemsSource="{Binding ItemTypesList}"
               SelectedItem="{Binding ItemObject.ItemTypeString}"/>
 
-      <HorizontalStackLayout Grid.Row="4"
+      <HorizontalStackLayout Grid.Row="5"
                              Grid.Column="1">
         <Button Text="Save" 
                 FontAutoScalingEnabled="True"
@@ -56,7 +66,8 @@
                 Margin="10,10,10,10"
                 WidthRequest="100"
                 HorizontalOptions="Start"
-                Command="{Binding Source={x:Reference AddItemView}, Path=BindingContext.AddItemCommand}"/>
+                Command="{Binding Source={x:Reference AddItemView}, Path=BindingContext.AddItemCommand}"
+                IsEnabled="{Binding IsSaveButtonEnabled}"/>
         <Button Text="Cancel" 
                 FontAutoScalingEnabled="True"
                 FontAttributes="Bold"
