--- a/ND.PantryPlanner.MAUI/Views/AddItem.xaml
+++ b/ND.PantryPlanner.MAUI/Views/AddItem.xaml
@@ -4,10 +4,15 @@
              xmlns:vm="clr-namespace:ND.PantryPlanner.MAUI.Commands"
              xmlns:model="clr-namespace:ND.PantryPlanner.ModelLayer.Models;assembly=ND.PantryPlanner.ModelLayer"
              xmlns:partial="clr-namespace:ND.PantryPlanner.MAUI.ViewsPartial"
+             xmlns:converters="clr-namespace:ND.PantryPlanner.MAUI.Converters"
              x:Class="ND.PantryPlanner.MAUI.Views.AddItem"
              x:DataType="vm:ItemViewModelCommands"
              x:Name="AddItemView"
              Title="Add Item">
+
+  <ContentPage.Resources>
+    <converters:InvertedBoolConverter x:Key="invertedBoolean" />
+  </ContentPage.Resources>
 
   <VerticalStackLayout>
     <partial:HeaderView ViewTitle="Add new Item"
@@ -17,7 +22,7 @@
              HeightRequest="1"
              Color="Black" />
 
-    <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto"
+    <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto"
           ColumnDefinitions="Auto,*">
       
       <Label Grid.Row="1"
@@ -50,15 +55,35 @@
 
       <Label Grid.Row="4"
              Margin="10,10,10,10"
+             Text="Has Expiration Date"
+             VerticalTextAlignment="Center"/>
+      <Switch Grid.Row="4"
+              Margin="10,10,10,10"
+              Grid.Column="1"
+              IsToggled="{Binding ItemObject.HasExpirationDate}" />
+
+      <Label Grid.Row="5"
+             Margin="10,10,10,10"
+             Text="Expiration Date"
+             VerticalTextAlignment="Center"/>
+      <DatePicker Grid.Row="5"
+                  Margin="10,10,10,10"
+                  Grid.Column="1"
+                  IsEnabled="{Binding ItemObject.HasExpirationDate, Converter={StaticResource invertedBoolean}}"
+                  Date="{Binding ItemObject.ExpirationDate}"/>
+
+      <Label Grid.Row="6"
+             Margin="10,10,10,10"
              Text="Item Type" 
              VerticalTextAlignment="Center"/>
-      <Picker Grid.Row="4"
+      <Picker Grid.Row="6"
               Margin="10,10,10,10"
               Grid.Column="1"
               ItemsSource="{Binding ItemTypesList}"
-              SelectedItem="{Binding ItemObject.ItemTypeString}"/>
+              SelectedItem="{Binding ItemObject.ItemTypeString}">
+      </Picker>
 
-      <HorizontalStackLayout Grid.Row="5"
+      <HorizontalStackLayout Grid.Row="7"
                              Grid.Column="1">
         <Button Text="Save" 
                 FontAutoScalingEnabled="True"
