feat: update Label elements with new attributes
- Add FontSize "Micro" to Label binding to Description
- Add HorizontalStackLayout with Label binding to Quantity
- Set FontSize "Micro" and Margin "0,10,10,0" for new Label

--- a/ND.PantryPlanner.MAUI/Views/MainPage.xaml
+++ b/ND.PantryPlanner.MAUI/Views/MainPage.xaml
@@ -45,8 +45,14 @@
                 </HorizontalStackLayout>
                 <HorizontalStackLayout>
                   <Label Text="{Binding Description}"
-                               LineBreakMode="WordWrap"
-                               Margin="0,10,10,0"/>
+                         FontSize="Micro"
+                         LineBreakMode="WordWrap"
+                         Margin="0,10,10,0"/>
+                </HorizontalStackLayout>
+                <HorizontalStackLayout>
+                  <Label Text="{Binding Quantity}"
+                         FontSize="Micro"
+                         Margin="0,10,10,0"/>
                 </HorizontalStackLayout>
                 <HorizontalStackLayout Margin="0,10,5,5">
                   <Button Text="Edit"
