feat: add localization support and UI updates
* Add localized string properties in AppResources.Designer.cs
* Add German and English translations in .resx files
* Update XAML files to use localized strings
* Introduce ItemTypeDe enum for German item types
* Conditionally include Android resources in .csproj
* Add comments and TODO in ItemTypeRepository.cs
* Set MaximumWidthRequest for description label in HeaderView.xaml

--- a/ND.PantryPlanner.MAUI/ViewsPartial/HeaderView.xaml
+++ b/ND.PantryPlanner.MAUI/ViewsPartial/HeaderView.xaml
@@ -16,6 +16,8 @@
            Text="{Binding ViewDescription}"
            HorizontalOptions="Start"
            LineBreakMode="WordWrap"
-           FontSize="Body"/>
+           MaximumWidthRequest="355"
+           FontSize="Body"
+           />
   </Grid>
 </ContentView>
