--- a/ND.PantryPlanner.MAUI/Views/AddItem.xaml
+++ b/ND.PantryPlanner.MAUI/Views/AddItem.xaml
@@ -4,19 +4,20 @@
              xmlns:vm="clr-namespace:ND.PantryPlanner.MAUI.Commands"
              xmlns:model="clr-namespace:ND.PantryPlanner.ModelLayer.Models;assembly=ND.PantryPlanner.ModelLayer"
              xmlns:partial="clr-namespace:ND.PantryPlanner.MAUI.ViewsPartial"
+             xmlns:local="clr-namespace:ND.PantryPlanner.MAUI.Resources.Localization"
              xmlns:converters="clr-namespace:ND.PantryPlanner.MAUI.Converters"
              x:Class="ND.PantryPlanner.MAUI.Views.AddItem"
              x:DataType="vm:ItemViewModelCommands"
              x:Name="AddItemView"
-             Title="Add Item">
+             Title="{x:Static local:AppResources.AddItemPageTitle}">
 
   <ContentPage.Resources>
     <converters:InvertedBoolConverter x:Key="invertedBoolean" />
   </ContentPage.Resources>
 
   <VerticalStackLayout>
-    <partial:HeaderView ViewTitle="Add new Item"
-                        ViewDescription="Use this screen to register a new item for your pantry." />
+    <partial:HeaderView ViewTitle="{x:Static local:AppResources.ViewTitleAddItem}"
+                        ViewDescription="{x:Static local:AppResources.ViewDescriptionAddItem}" />
 
     <BoxView Margin="10,10,10,10"
              HeightRequest="1"
@@ -27,7 +28,7 @@
       
       <Label Grid.Row="1"
              Margin="10,10,10,10"
-             Text="Name" 
+             Text="{x:Static local:AppResources.Name}" 
              VerticalTextAlignment="Center"/>
       <Entry Grid.Row="1"
              Margin="10,10,10,10"
@@ -36,7 +37,7 @@
       
       <Label Grid.Row="2"
              Margin="10,10,10,10"
-             Text="Description" 
+             Text="{x:Static local:AppResources.Description}" 
              VerticalTextAlignment="Center"/>
       <Entry Grid.Row="2"
              Margin="10,10,10,10"
@@ -45,7 +46,7 @@
 
       <Label Grid.Row="3"
              Margin="10,10,10,10"
-             Text="Quantity" 
+             Text="{x:Static local:AppResources.Quantity}" 
              VerticalTextAlignment="Center"/>
       <Entry Grid.Row="3"
              Margin="10,10,10,10"
@@ -55,7 +56,7 @@
 
       <Label Grid.Row="4"
              Margin="10,10,10,10"
-             Text="Has Expiration Date"
+             Text="{x:Static local:AppResources.HasExpirationDate}"
              VerticalTextAlignment="Center"/>
       <Switch Grid.Row="4"
               Margin="10,10,10,10"
@@ -64,7 +65,7 @@
 
       <Label Grid.Row="5"
              Margin="10,10,10,10"
-             Text="Expiration Date"
+             Text="{x:Static local:AppResources.ExpirationDate}"
              VerticalTextAlignment="Center"/>
       <DatePicker Grid.Row="5"
                   Margin="10,10,10,10"
@@ -74,7 +75,7 @@
 
       <Label Grid.Row="6"
              Margin="10,10,10,10"
-             Text="Item Type" 
+             Text="{x:Static local:AppResources.ItemType}" 
              VerticalTextAlignment="Center"/>
       <Picker Grid.Row="6"
               Margin="10,10,10,10"
@@ -85,7 +86,7 @@
 
       <HorizontalStackLayout Grid.Row="7"
                              Grid.Column="1">
-        <Button Text="Save" 
+        <Button Text="{x:Static local:AppResources.SaveButton}" 
                 FontAutoScalingEnabled="True"
                 FontAttributes="Bold"
                 Margin="10,10,10,10"
@@ -93,7 +94,7 @@
                 HorizontalOptions="Start"
                 Command="{Binding Source={x:Reference AddItemView}, Path=BindingContext.AddItemCommand}"
                 IsEnabled="{Binding IsSaveButtonEnabled}"/>
-        <Button Text="Cancel" 
+        <Button Text="{x:Static local:AppResources.CancelButton}" 
                 FontAutoScalingEnabled="True"
                 FontAttributes="Bold"
                 Margin="10,10,10,10"
