--- a/ND.PantryPlanner.MAUI/Views/EditItem.xaml
+++ b/ND.PantryPlanner.MAUI/Views/EditItem.xaml
@@ -4,19 +4,20 @@
              xmlns:vm="clr-namespace:ND.PantryPlanner.MAUI.Commands"
              xmlns:model="clr-namespace:ND.PantryPlanner.ModelLayer.Models;assembly=ND.PantryPlanner.ModelLayer"
              xmlns:partial="clr-namespace:ND.PantryPlanner.MAUI.ViewsPartial"
+             xmlns:local="clr-namespace:ND.PantryPlanner.MAUI.Resources.Localization"
              xmlns:converters="clr-namespace:ND.PantryPlanner.MAUI.Converters"
              x:Class="ND.PantryPlanner.MAUI.Views.EditItem"
              x:DataType="vm:ItemViewModelCommands"
              x:Name="EditItemView"
-             Title="Edit Item">
+             Title="{x:Static local:AppResources.EditItemPageTitle}">
 
   <ContentPage.Resources>
     <converters:InvertedBoolConverter x:Key="invertedBoolean" />
   </ContentPage.Resources>
 
   <VerticalStackLayout>
-    <partial:HeaderView ViewTitle="Modify Item"
-                        ViewDescription="Use this screen to modify an existing item from your pantry." />
+    <partial:HeaderView ViewTitle="{x:Static local:AppResources.ViewTitleModifyItem}"
+                        ViewDescription="{x:Static local:AppResources.ViewDescriptionModifyItem}" />
 
     <BoxView Margin="10,10,10,10"
              HeightRequest="1"
@@ -26,73 +27,73 @@
           ColumnDefinitions="Auto,*">
 
       <Label Grid.Row="1"
-             Margin="10,10,10,10"
-             Text="Name" 
-             VerticalTextAlignment="Center"/>
+       Margin="10,10,10,10"
+       Text="{x:Static local:AppResources.Name}" 
+       VerticalTextAlignment="Center"/>
       <Entry Grid.Row="1"
-             Grid.Column="1"
-             Margin="10,10,10,10"
-             Text="{Binding ItemObject.Name}" />
+       Margin="10,10,10,10"
+       Grid.Column="1"
+       Text="{Binding ItemObject.Name}" />
 
       <Label Grid.Row="2"
-             Margin="10,10,10,10"
-             Text="Description" 
-             VerticalTextAlignment="Center"/>
+       Margin="10,10,10,10"
+       Text="{x:Static local:AppResources.Description}" 
+       VerticalTextAlignment="Center"/>
       <Entry Grid.Row="2"
-             Margin="10,10,10,10"
-             Grid.Column="1"
-             Text="{Binding ItemObject.Description}"/>
+       Margin="10,10,10,10"
+       Grid.Column="1"
+       Text="{Binding ItemObject.Description}"/>
 
       <Label Grid.Row="3"
-             Margin="10,10,10,10"
-             Text="Quantity" 
-             VerticalTextAlignment="Center"/>
+       Margin="10,10,10,10"
+       Text="{x:Static local:AppResources.Quantity}" 
+       VerticalTextAlignment="Center"/>
       <Entry Grid.Row="3"
-             Margin="10,10,10,10"
-             Grid.Column="1"
-             Keyboard="Numeric"
-             Text="{Binding ItemObject.Quantity}" />
+       Margin="10,10,10,10"
+       Grid.Column="1"
+       Keyboard="Numeric"
+       Text="{Binding ItemObject.Quantity}" />
 
       <Label Grid.Row="4"
-             Margin="10,10,10,10"
-             Text="Has Expiration Date" 
-             VerticalTextAlignment="Center"/>
+       Margin="10,10,10,10"
+       Text="{x:Static local:AppResources.HasExpirationDate}"
+       VerticalTextAlignment="Center"/>
       <Switch Grid.Row="4"
-             Margin="10,10,10,10"
-             Grid.Column="1"
-             IsToggled="{Binding ItemObject.HasExpirationDate}" />
+        Margin="10,10,10,10"
+        Grid.Column="1"
+        IsToggled="{Binding ItemObject.HasExpirationDate}" />
 
       <Label Grid.Row="5"
-             Margin="10,10,10,10"
-             Text="Expiration Date"
-             VerticalTextAlignment="Center"/>
+       Margin="10,10,10,10"
+       Text="{x:Static local:AppResources.ExpirationDate}"
+       VerticalTextAlignment="Center"/>
       <DatePicker Grid.Row="5"
-                  Margin="10,10,10,10"
-                  Grid.Column="1"
-                  IsEnabled="{Binding ItemObject.HasExpirationDate, Converter={StaticResource invertedBoolean}}"
-                  Date="{Binding ItemObject.ExpirationDate}"/>
+            Margin="10,10,10,10"
+            Grid.Column="1"
+            IsEnabled="{Binding ItemObject.HasExpirationDate, Converter={StaticResource invertedBoolean}}"
+            Date="{Binding ItemObject.ExpirationDate}"/>
 
       <Label Grid.Row="6"
-             Margin="10,10,10,10"
-             Text="Item Type" 
-             VerticalTextAlignment="Center"/>
+       Margin="10,10,10,10"
+       Text="{x:Static local:AppResources.ItemType}" 
+       VerticalTextAlignment="Center"/>
       <Picker Grid.Row="6"
-              Margin="10,10,10,10"
-              Grid.Column="1"
-              ItemsSource="{Binding ItemTypesList}"
-              SelectedItem="{Binding ItemObject.ItemTypeString}">
+        Margin="10,10,10,10"
+        Grid.Column="1"
+        ItemsSource="{Binding ItemTypesList}"
+        SelectedItem="{Binding ItemObject.ItemTypeString}">
       </Picker>
 
       <HorizontalStackLayout Grid.Row="7"
                              Grid.Column="1">
-        <Button Text="Save" 
+        <Button Text="{x:Static local:AppResources.SaveButton}" 
                 FontAutoScalingEnabled="True"
                 FontAttributes="Bold"
                 Margin="10,10,10,10"
                 WidthRequest="100"
                 HorizontalOptions="Start"
                 Command="{Binding Source={x:Reference EditItemView}, Path=BindingContext.UpdateItemCommand}"/>
-        <Button Text="Cancel" 
+        <Button Text="{x:Static local:AppResources.CancelButton}" 
                 FontAutoScalingEnabled="True"
                 FontAttributes="Bold"
                 Margin="10,10,10,10"
