--- a/ND.PantryPlanner.MAUI/Views/MainPage.xaml
+++ b/ND.PantryPlanner.MAUI/Views/MainPage.xaml
@@ -20,8 +20,8 @@
                 Margin="10,10,10,10"
                 HorizontalOptions="Start"
                 Command="{Binding Source={x:Reference MainPageView}, Path=BindingContext.ShowAddItemCommand}"/>
-        <partial:HeaderView ViewTitle="{x:Static local:AppResources.ViewTitle}"
-                            ViewDescription="{x:Static local:AppResources.ViewDescription}"/>
+        <partial:HeaderView ViewTitle="{x:Static local:AppResources.ViewTitleMain}"
+                            ViewDescription="{x:Static local:AppResources.ViewDescriptionMain}"/>
       </HorizontalStackLayout>
       
       <BoxView Margin="0,0,0,10"
