--- a/ND.PantryPlanner.MAUI/Views/AddItem.xaml
+++ b/ND.PantryPlanner.MAUI/Views/AddItem.xaml
@@ -54,7 +54,7 @@
              Keyboard="Numeric"
              Text="{Binding ItemObject.Quantity}" />
 
-      <Label Grid.Row="4"
+      <!--<Label Grid.Row="4"
              Margin="10,10,10,10"
              Text="{x:Static local:AppResources.HasExpirationDate}"
              VerticalTextAlignment="Center"/>
@@ -71,7 +71,7 @@
                   Margin="10,10,10,10"
                   Grid.Column="1"
                   IsEnabled="{Binding ItemObject.HasExpirationDate, Converter={StaticResource invertedBoolean}}"
-                  Date="{Binding ItemObject.ExpirationDate}"/>
+                  Date="{Binding ItemObject.ExpirationDate}"/>-->
 
       <Label Grid.Row="6"
              Margin="10,10,10,10"
